tests/requests/invalid/014.py
from gunicorn import InvalidHeader

request = InvalidHeader
